<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_phone_number" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="12345678910"
        android:inputType="phone"
        android:typeface="monospace"
        app:keep_hint="true"
        app:mask="+7(###)###-##-##"
        mask:allowed_chars="1234567890" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/makeOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_order" />
    </LinearLayout>


</LinearLayout>